# AiKhbar

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/analytics/: __init__.py  media_analysis.py
backend/app/classification/: __init__.py  classifier.py  schemas.py
backend/app/core/: config.py  constants.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  article.py  cluster.py  opinion.py  summary.py  timeline.py  user.py
backend/app/personalization/: __init__.py  engine.py
backend/app/rag/: chunker.py  indexer.py  opinion_aggregator.py  retriever.py  timeline_builder.py  vector_store.py
backend/app/schemas/: article.py  chat.py  common.py  story.py  tts.py  user.py
backend/app/scraping/: __init__.py  dedup.py  extractor.py  hashing.py  rss_scraper.py  sources.py
backend/app/services/: article_repository.py  chat_service.py  cluster_repository.py  daily_brief.py  embeddings.py  ingestion_pipeline.py  nvidia_client.py  prompts.py  scheduler.py
backend/app/summarization/: __init__.py  clustering.py  summarizer.py
backend/app/tts/: __init__.py  base.py  coqui_tts.py  narration.py  service.py  urdu_orator.py
backend/migrations/: env.py
backend/requirements/: base.txt  dev.txt
backend/scripts/: __init__.py  backfill_images.py  reclassify.py  recluster.py  run_ingestion.py
backend/tests/: conftest.py  test_chunker.py  test_dedup.py  test_narration.py
(+59 files in other folders)
